--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Experiments to handle the very first model for my thesis.\n",
     "T\n",
-    "The plan is to implement a **basic stacking algorithm** using the existing Binary Relevance implementation, found in the `scikit-multilearn` library, and then implement the actual new model, which runs a specific feature selection process between each layer of the stacking algorithm."
+    "The plan is to implement a **basic stacking algorithm** using the existing Binary Relevance implementation, found in the `scikit-multilearn` library, and then implement the actual new model, which runs a specific feature selection process between each layer of the stacking algorithm.\n",
+    "\n",
+    "The initial experimentation follows [this page](http://scikit.ml/tutorial.html)."
    ]
   },
   {
@@ -499,6 +501,15 @@
    ],
    "source": [
     "label_names\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `scene` as this dataset seems to be a little bit more comprehensible than the others I tested.\n",
+    "\n",
+    "For more information regarding the datasets and how `scikit-multilearn` handles them, [read this page](http://scikit.ml/datasets.html)."
    ]
   }
  ],
