implements first basic stacking test

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -511,6 +511,277 @@
     "\n",
     "For more information regarding the datasets and how `scikit-multilearn` handles them, [read this page](http://scikit.ml/datasets.html)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = BinaryRelevance(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BinaryRelevance(classifier=SVC(), require_dense=[False, True])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = clf.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction.todense()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Beach', ['0', '1']),\n",
+       " ('Sunset', ['0', '1']),\n",
+       " ('FallFoliage', ['0', '1']),\n",
+       " ('Field', ['0', '1']),\n",
+       " ('Mountain', ['0', '1']),\n",
+       " ('Urban', ['0', '1'])]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.metrics as metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08416945373467112"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.hamming_loss(y_test, prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5869565217391305"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(y_test, prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.646467, 0.666435, 0.685047, ..., 0.247298, 0.014025, 0.029709],\n",
+       "        [0.770156, 0.767255, 0.761053, ..., 0.137833, 0.082672, 0.03632 ],\n",
+       "        [0.793984, 0.772096, 0.76182 , ..., 0.051125, 0.112506, 0.083924],\n",
+       "        ...,\n",
+       "        [0.85639 , 1.      , 1.      , ..., 0.019464, 0.022167, 0.043738],\n",
+       "        [0.805592, 0.80417 , 0.811438, ..., 0.346736, 0.231481, 0.332623],\n",
+       "        [0.855064, 0.858896, 0.911177, ..., 0.262119, 0.104471, 0.34728 ]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
+    "from typing import List, Optional, Any\n",
+    "import numpy as np\n",
+    "\n",
+    "class BasicStacking(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: BinaryRelevance\n",
+    "\n",
+    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "        super(BasicStacking, self).__init__(classifier, require_dense)\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "        self.second_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        print(X_expanded)\n",
+    "\n",
+    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "    \n",
+    "    def predict(self, X: Any):\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
+    "        return self.second_layer_classifiers.predict(X_expanded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.646467 0.666435 0.685047 ... 0.       0.       0.      ]\n",
+      " [0.770156 0.767255 0.761053 ... 0.       0.       0.      ]\n",
+      " [0.793984 0.772096 0.76182  ... 0.       0.       0.      ]\n",
+      " ...\n",
+      " [0.85639  1.       1.       ... 0.       0.       0.      ]\n",
+      " [0.805592 0.80417  0.811438 ... 0.       0.       1.      ]\n",
+      " [0.855064 0.858896 0.911177 ... 0.       0.       1.      ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = BasicStacking()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stacking_prediction = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hamming_loss 0.08416945373467112\n",
+      "accuracy 0.5869565217391305\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hamming_loss\", metrics.hamming_loss(y_test, stacking_prediction))\n",
+    "print(\"accuracy\", metrics.accuracy_score(y_test, stacking_prediction))\n"
+   ]
   }
  ],
  "metadata": {
