reorganizes code a bit

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -15,16 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.dataset import load_dataset, available_data_sets\n"
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from sklearn.svm import SVC\n",
+    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
+    "from typing import List, Optional, Any\n",
+    "import numpy as np\n",
+    "import sklearn.metrics as metrics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +140,7 @@
        "              'yeast-train.scikitml.bz2']})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +474,7 @@
        " ('Att294', 'NUMERIC')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +499,7 @@
        " ('Urban', ['0', '1'])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,17 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skmultilearn.problem_transform import BinaryRelevance\n",
-    "from sklearn.svm import SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +540,7 @@
        "BinaryRelevance(classifier=SVC(), require_dense=[False, True])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +575,7 @@
        "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +600,7 @@
        " ('Urban', ['0', '1'])]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,16 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sklearn.metrics as metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -634,18 +620,19 @@
        "0.08416945373467112"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics.hamming_loss(y_test, prediction)"
+    "regular_br_hamming_loss = metrics.hamming_loss(y_test, prediction)\n",
+    "regular_br_hamming_loss\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -654,51 +641,22 @@
        "0.5869565217391305"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics.accuracy_score(y_test, prediction)"
+    "regular_br_accuracy_score = metrics.accuracy_score(y_test, prediction)\n",
+    "regular_br_accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0.646467, 0.666435, 0.685047, ..., 0.247298, 0.014025, 0.029709],\n",
-       "        [0.770156, 0.767255, 0.761053, ..., 0.137833, 0.082672, 0.03632 ],\n",
-       "        [0.793984, 0.772096, 0.76182 , ..., 0.051125, 0.112506, 0.083924],\n",
-       "        ...,\n",
-       "        [0.85639 , 1.      , 1.      , ..., 0.019464, 0.022167, 0.043738],\n",
-       "        [0.805592, 0.80417 , 0.811438, ..., 0.346736, 0.231481, 0.332623],\n",
-       "        [0.855064, 0.858896, 0.911177, ..., 0.262119, 0.104471, 0.34728 ]])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.todense()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
-    "from typing import List, Optional, Any\n",
-    "import numpy as np\n",
-    "\n",
     "class BasicStacking(ProblemTransformationBase):\n",
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: BinaryRelevance\n",
@@ -733,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,21 +724,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hamming_loss 0.08416945373467112\n",
-      "accuracy 0.5869565217391305\n"
+      "br hamming_loss 0.08416945373467112\n",
+      "br accuracy 0.5869565217391305\n",
+      "===\n",
+      "stacking hamming_loss 0.08416945373467112\n",
+      "stacking accuracy 0.5869565217391305\n"
      ]
     }
    ],
    "source": [
-    "print(\"hamming_loss\", metrics.hamming_loss(y_test, stacking_prediction))\n",
-    "print(\"accuracy\", metrics.accuracy_score(y_test, stacking_prediction))\n"
+    "stacking_hamming_loss = metrics.hamming_loss(y_test, stacking_prediction)\n",
+    "stacking_accuracy_score = metrics.accuracy_score(y_test, stacking_prediction)\n",
+    "\n",
+    "print(\"br hamming_loss\", regular_br_hamming_loss)\n",
+    "print(\"br accuracy\", regular_br_accuracy_score)\n",
+    "print(\"===\")\n",
+    "print(\"stacking hamming_loss\", stacking_hamming_loss)\n",
+    "print(\"stacking accuracy\", stacking_accuracy_score)\n"
    ]
   }
  ],
