lays out next sections

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -14,6 +14,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1. Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from sklearn.svm import SVC\n",
+    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
+    "from typing import List, Optional, Any\n",
+    "import numpy as np\n",
+    "import sklearn.metrics as metrics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2. Setting up a stacking classifier\n",
+    "\n",
+    "At first, let's build a simple stacking implementation, so we can have a baseline to compare with the specialized stacking implementation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -749,6 +779,66 @@
     "print(\"stacking hamming_loss\", stacking_hamming_loss)\n",
     "print(\"stacking accuracy\", stacking_accuracy_score)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "Both the Binary Relevance and the Stacking approaches resulted in the exact same performance.\n",
+    "\n",
+    "Possibilites:\n",
+    "* The stacking implementation is wrong.\n",
+    "  * To test this, we have to review the code and compare it to other stacking implementations; for instance: the stacking implementation in the `utiml` library for R.\n",
+    "* The stacking implementation is correct, but the labels are not correlated at all, meaning that the stacking approach is not useful.\n",
+    "  * To test this, we have to check other datasets and see if the stacking approach is useful in those cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3. Comparing to other stacking implementations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4. Using other datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bla\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"bla\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
