adds missing imports

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -22,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from skmultilearn.dataset import load_dataset, available_data_sets\n",
     "from sklearn.svm import SVC\n",
     "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
     "from typing import List, Optional, Any\n",
@@ -41,20 +42,6 @@
     "## 1.2. Setting up a stacking classifier\n",
     "\n",
     "At first, let's build a simple stacking implementation, so we can have a baseline to compare with the specialized stacking implementation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skmultilearn.problem_transform import BinaryRelevance\n",
-    "from sklearn.svm import SVC\n",
-    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
-    "from typing import List, Optional, Any\n",
-    "import numpy as np\n",
-    "import sklearn.metrics as metrics\n"
    ]
   },
   {
