--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -786,8 +786,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. Comparing to other stacking implementations"
+    "## 1.3. Comparing to other stacking implementations\n",
+    "\n",
+    "Let's compare my implementation of the stacking classifier to the one from [utiml](https://github.com/rivolli/utiml).\n",
+    "\n",
+    "[Here is a guide](https://cran.r-project.org/web/packages/utiml/vignettes/utiml-overview.html) to get started with the `utiml` library.\n",
+    "\n",
+    "2023-08-17: I tried to read the source code, but I could not spot exactly how the stacking is being implemented. As a matter of fact, I don't even know if my understanding of the stacking is correct.\n",
+    "\n",
+    "For now, I will proceed with implementing the actual model, and then I will try to go back and debug all of this."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
