explains the other section

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -696,7 +696,6 @@
     "\n",
     "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
     "        X_expanded = np.hstack([X.todense(), first_layer_predictions.todense()])\n",
-    "        print(X_expanded)\n",
     "\n",
     "        self.second_layer_classifiers.fit(X_expanded, y)\n",
     "    \n",
@@ -815,7 +814,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4. Using other datasets"
+    "## 1.4. Using other datasets\n",
+    "\n",
+    "I will try to list all available datasets, then try all of them using Binary Relevance as a baseline and my Basic Stacking approach. The objective is to see if the performance metrics change for any of the datasets."
    ]
   },
   {
