starts to add basic pipeline

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from skmultilearn.dataset import load_dataset, available_data_sets\n",
     "from sklearn.svm import SVC\n",
     "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
-    "from typing import List, Optional, Any\n",
+    "from typing import List, Optional, Any, Tuple\n",
     "import numpy as np\n",
     "import sklearn.metrics as metrics\n"
    ]
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "              'yeast-train.scikitml.bz2']})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,15 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scene:train - exists, not redownloading\n",
-      "scene:test - exists, not redownloading\n"
+      "scene:train - does not exists downloading\n",
+      "Downloaded scene-train\n",
+      "scene:test - does not exists downloading\n",
+      "Downloaded scene-test\n"
      ]
     }
    ],
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
        " ('Att294', 'NUMERIC')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +518,7 @@
        " ('Urban', ['0', '1'])]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,27 +823,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BasicStackingAgainstBinaryRelevanceBaselineTest:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def run(self):\n",
+    "        for name in self.get_unique_available_data_set_names():\n",
+    "            data = self.get_data_set(name)\n",
+    "            print(data)\n",
+    "            break\n",
+    "        \n",
+    "    def get_unique_available_data_set_names(self):\n",
+    "        dataset_names = []\n",
+    "\n",
+    "        _available_data_sets = available_data_sets()\n",
+    "        if _available_data_sets is None:\n",
+    "            raise Exception(\"could not load available data sets\")\n",
+    "\n",
+    "        for dataset_name, variant in _available_data_sets:\n",
+    "            if dataset_name not in dataset_names:\n",
+    "                dataset_names.append(dataset_name)\n",
+    "\n",
+    "        return dataset_names\n",
+    "\n",
+    "    def get_data_set(self, name: str) -> Tuple[np.ndarray, np.ndarray, np.ndarray, np.ndarray]:\n",
+    "        train_data = load_dataset(name, \"train\")\n",
+    "        if train_data is None:\n",
+    "            raise Exception(f\"could not load data set {name}\")\n",
+    "\n",
+    "        test_data = load_dataset(name, \"test\")\n",
+    "        if test_data is None:\n",
+    "            raise Exception(f\"could not load data set {name}\")\n",
+    "        \n",
+    "        X_train, y_train, _, _ = train_data\n",
+    "        X_test, y_test, _, _ = test_data\n",
+    "        \n",
+    "        return X_train, y_train, X_test, y_test\n",
+    "\n",
+    "# using `scene` as this dataset seems to be a little bit more comprehensible than the others I tested\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bla\n"
+      "bibtex:train - exists, not redownloading\n",
+      "bibtex:test - exists, not redownloading\n",
+      "(<4880x1836 sparse matrix of type '<class 'numpy.float64'>'\n",
+      "\twith 334250 stored elements in List of Lists format>, <4880x159 sparse matrix of type '<class 'numpy.int64'>'\n",
+      "\twith 11616 stored elements in List of Lists format>, <2515x1836 sparse matrix of type '<class 'numpy.float64'>'\n",
+      "\twith 173496 stored elements in List of Lists format>, <2515x159 sparse matrix of type '<class 'numpy.int64'>'\n",
+      "\twith 6146 stored elements in List of Lists format>)\n"
      ]
     }
    ],
    "source": [
-    "print(\"bla\")"
+    "pipeline = BasicStackingAgainstBinaryRelevanceBaselineTest()\n",
+    "pipeline.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -860,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
